src/main/webapp/public/resources/style.css
/* ... */
a {
    color: #2D2D2D;
    text-decoration: underline;
    font-weight: bold;
    cursor: pointer;
}

p {
    max-width: 100%;
    color: #2D2D2D;
    position: relative;
    margin-left: auto;
    margin-right: auto;
    font-size: 13px;

}

hr {
    float: none;
    width: 100%;
    position: relative;
    margin-left: 5px;
    margin-top: 30px;
    margin-bottom: 30px;
}

h1 {
    font-size: 16px;
}

h2 {
    font-size: 14px;
}

h3 {
    font-size: 12px;
}

form {
    display: inline;
}

.link-randomPasswordValue {
    cursor: pointer;
    font-family: monospace;
}

#form {
    border-radius: 3px;
    -moz-border-radius: 3px;
    border-collapse: separate;
}

table {
    border-collapse: collapse;
    border: 1px solid #dae1e1;
    width: 98%;
    margin-left: auto;
    margin-right: auto
}

table.nomargin {
    width: 100%;
    margin:0;
    padding: 0;
}

.tabContent {
    padding: 10px !important;
}

table td {
    border: 1px solid #dae1e1;
    padding: 5px;
}

table td.title {
    text-align: center;
    font-weight: bold;
    font-size: 120%;
    padding-right: 10px;
    background-color: #dae1e1
}

table td.key {
    text-align: right;
    font-weight: bold;
    padding-right: 10px;
    width: 36%;
}

.health-body {
    padding-top:5px;
    padding-bottom:10px;
}

.healthTable-wrapper {
    margin-top:5px; margin-left: 0; margin-right: 0; padding:0;
    max-height: 300px; overflow-y: auto
}

.healthTable-footer {
    text-align: center;
}

.healthTable {
}

.health-GOOD {
    white-space:nowrap;
    background-color: #8ced3f;
    text-align: center;
}

.health-CAUTION {
    white-space:nowrap;
    background-color: #ffcd59;
    text-align: center;
}

.health-CONFIG {
    white-space:nowrap;
    background-color: #ecd5d5;
    text-align: center;
}

.health-WARN {
    white-space:nowrap;
    background-color: #d20734;
    text-align: center;
}

.health-UNKNOWN {
    white-space:nowrap;
    background-color: red;
    text-align: center;
}

.inputfield {
    width: 60%;
    margin: 5px;
    height: 18px;
    padding-left: 4px;
}

.selectfield {
    height: auto;
    width: 60%;
}


.noticebar {
    width: 100%;
    font-size: smaller;
    font-style: italic;
    text-align: center;
}

.noborder {
    border: 0;
    border-collapse: collapse;
} .noborder td {
      border: 0;
      border-collapse: collapse;
  }

.nopadding {
    padding: 0;
}

.nodisplay {
    display: none;
}

/* disable ie password reveal */
input[type=password]::-ms-reveal{display: none;}

.tokenInput {
    height: 130px;
    width: 90%;
    resize: none;
    display: block;
    margin-bottom: 30px;
}

.icon-showhidepassword {
}

.changepasswordfield {
    width: 90%;
    margin-right: 5px;
}

.menubutton_key {
    border: 0;
    width: 160px;
    table-layout: fixed;
}

.menubutton {
    max-width: 135px;
    width: 135px;
    padding: 4px 11px;
    display: block;
    border-radius: 3px;
    border: 10px;
    color: black;
    margin: 0 5px;
    cursor: pointer;
}


/* main body wrapper, all elements (except footer) should be within wrapper */
#wrapper {
    width: 100%;
    min-height: 100%;
    height: auto !important;
    height: 100%;
    margin: 0 auto -60px;
    position: relative;
}

/* main content section, all content should be inside a centerbody div */
#centerbody {
    width: 600px;
    padding: 5px;
    margin-top: 20px;
    position: relative;
    margin-left: auto;
    margin-right: auto;
    clear: both;
}

#centerbody.wide {
    width: 90%;
    min-width: 600px;
}

#centerbody.tall {
    bottom: 80px;
    height: auto !important;
    left: 40px;
    margin: auto;
    min-width: auto;
    position: absolute;
    right: 40px;
    top: 100px;
    width: auto;
}

/* tile styles */
#centerbody.tile-centerbody {
    position: relative;
    background-color: transparent;
    border: 0;
    padding: 25px;
    margin-top: 0;
    min-width: 150px;
    box-shadow: none;
}

#centerbody.tile-centerbody > a {
    display: inline-block;
}

.tile {
    position: relative;
    float: left;
    background: #fff;
    border: 1px solid #f6f9f8;
    border-radius: 2px;
    margin-right: 5px;
    margin-bottom: 5px;
    text-align: center;
    padding: 10px;
    width: 165px;
    height: 165px;
    overflow: hidden;
    z-index: 600;
    font-weight: normal;
}


.tile:hover {
    background: #fff;
    border: 1px solid #808080;
    cursor: pointer;
}

.tile-image {
    background: transparent none no-repeat scroll center center;
    font: 40px FontAwesome;
    height: 50px;
    margin-bottom: 5px;
}

.tile-image > .btn-icon {
    margin-right: 0;
}

.tile-image.password-image:before {
    content: "\f084";
}

.tile-image.search-image:before {
    content: "\f002";
}

.tile-image.newuser-image:before {
    content: "\f234";
}

.tile-image.activation-image:before {
    content: "\f19d";
}

.tile-image.forgotten-image:before {
    content: "\f09c";
}

.tile-image.security-image:before {
    content: "\f0cb";
}

.tile-image.mobile-image:before {
    content: "\f029";
}

.tile-image.profile-image:before {
    content: "\f044";
}

.tile-image.shortcut-image:before {
    content: "\f08e";
}

.tile-image.user-image:before {
    content: "\f016";
}

.tile-image.support-image:before {
    content: "\f007";
}

.tile-image.guest-image:before {
    content: "\f0c0";
}

.tile-image.admin-image:before {
    content: "\f0e4";
}

.tile-image.configmanager-image:before {
    content: "\f085";
}


.tile-image.selfdelete-image:before {
    content: "\f235";
}

.tile-image.orgchart-image:before {
    content: "\f0e8";
}



.tile-title {
    color: #434c50;
    font-size: 16px;
    overflow: hidden;
    margin-bottom: 2px;
    text-overflow: ellipsis;
}

.tile-subtitle {
    font-size: 12px;
    font-weight: normal;
    line-height: 14px;
    color: #808080;
    overflow: hidden;
    height: 70px;
}
/* ... */

